fixed shadow on games lists, remove timestamp on mobile

--- a/frontend/src/assets/scss/lobby-view/_lobby.scss
+++ b/frontend/src/assets/scss/lobby-view/_lobby.scss
@@ -55,9 +55,6 @@
 		&:hover {
 			background-color: $tertiary-color;
 			color: $light-color;
-			box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
-			-webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
-			-moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 		}
 	}
 
@@ -126,13 +123,16 @@
 	color: $light-color;
 
 	ul {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 		margin: 0;
 		padding: 0;
 		overflow-y: scroll;
 		-ms-overflow-style: none;
 		scrollbar-width: none;
-		width: 75%;
-		max-width: 480px;
+		width: 80%;
+		max-width: 500px;
 
 		&::-webkit-scrollbar {
 			display: none;
@@ -148,6 +148,7 @@
 			border: 2px dashed $light-color;
 			border-radius: 8px;
 			margin-bottom: 0.7rem;
+			width: 92%;
 			box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 			-webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 			-moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
@@ -196,12 +197,15 @@
 	}
 
 	ul {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 		margin: 0;
 		padding: 0;
 		overflow-y: scroll;
 		-ms-overflow-style: none;
 		scrollbar-width: none;
-		width: 75%;
+		width: 80%;
 		max-width: 480px;
 
 		&::-webkit-scrollbar {
@@ -218,6 +222,7 @@
 			border: 2px dashed $light-color;
 			border-radius: 8px;
 			margin-bottom: 0.7rem;
+			width: 92%;
 			box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 			-webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 			-moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
@@ -243,7 +248,6 @@
 			}
 
 			.player-names {
-				// padding: 0.5rem 0.8rem 0.5rem 0.2rem;
 				padding: 0 0 0 1rem;
 				display: flex;
 				flex-direction: column;
@@ -252,7 +256,6 @@
 				width: 90%;
 				border-left: 2px dashed $light-color;
 				border-right: 2px dashed $light-color;
-
 
 				.player-1-name {
 					color: $tertiary-color;
@@ -288,7 +291,7 @@
 		margin: 0;
 		padding: 6px;
 		width: 80%;
-		height: 100%;
+		height: fit-content;
 		text-align: center;
 		// border: 2px dashed $light-color;
 		border-top: 2px dashed $light-color;
@@ -365,6 +368,29 @@
 	}
 }
 
+@media screen and (max-width: $breakpoint-tablet) {
+
+	#ten-games {
+
+		ul {
+
+			li {
+
+				.player-names {
+					border-left: none;
+					padding-left: 0.2rem;
+				}
+
+				.finish-time {
+					display: none;
+				}
+
+			}
+
+		}
+	}
+}
+
 @media screen and (min-width: $breakpoint-desktop) {
 
 	#enter-game {
@@ -420,7 +446,7 @@
 
 		#user {
 			margin-bottom: 0.4rem;
-			font-size: 1.2rem;
+			font-size: 1.1rem;
 		}
 	}
 
